# physical-ai-humanoid-book

./: .gitignore  GEMINI.md
.claude/: settings.local.json
.specify/memory/: constitution.md
book/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
book/docs/01-ros2-basics/: 01-ros-2-fundamentals.mdx  02-python-agents-with-rclpy.mdx  03-urdf-for-humanoids.mdx  _category_.json
book/docs/02-digital-twin/: 01-gazebo-physics.mdx  02-unity-visualization.mdx  03-sensor-simulation.mdx  _category_.json
book/docs/03-ai-robot-brain/: 01-isaac-sim-workflow.mdx  02-isaac-ros-vslam-navigation.mdx  03-nav2-path-planning.mdx  _category_.json
book/docs/04-vla-robotics/: 01-voice-to-action-pipeline.mdx  02-llm-cognitive-planning.mdx  03-ros2-action-graphs.mdx  _category_.json
book/src/examples/01-ros2-basics/: package.xml  setup.py
book/src/examples/01-ros2-basics/ros2_basics/: humanoid_control_agent.py  simple_humanoid.urdf  simple_publisher.py  simple_service_server.py  simple_subscriber.py
book/src/pages/: index.tsx
docusaurus-template/: docusaurus.config.ts  package-lock.json  package.json
specs/001-ros2-humanoid-basics/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-digital-twin-gazebo-unity/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-ai-robot-brain-isaac/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-vla-robotics/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+49 files in other folders)
